add global config and switch to new server